# automake-tap

./: .gitignore  Makefile.am  Makefile.dist  README.md  bar.scm  bar.test  baz.scm  baz.test  configure.ac  foo.scm  foo.test  qux.test
